--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,10 +23,10 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
+  primary:    #68AA63,
+  secondary:  #e8919f,
   danger:     #f53d3d,
-  light:      #f4f4f4,
+  light:      #D7A872,
   dark:       #222,
   favorite:   #69BB7B
 );
